# OC-labs

Laba1/: 1234  1laba.cpp  remove_vowels  remove_vowels.cpp
Laba2/: 2.c  program
Laba3/: CMakeLists.txt  child  child.c  parent  parent.c  read  test
Laba4/: CMakeLists.txt  main.c  memory_allocator.c  test_main.c
